k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 2   # can scale independently of everything else — this is why separate Deployments matter
  selector:
    matchLabels: {app: fraud-api}
  template:
    metadata:
      labels: {app: fraud-api}
    spec:
      serviceAccountName: sa-app
      containers:
      - name: app
        image: bennetsharwin/sentinalbank-app:1.0   # must be pre-built & pushed; k8s can't run `build:`
        ports: [{containerPort: 8000}]
---
apiVersion: v1
kind: Service
metadata:
  name: fraud-api
spec:
  selector: {app: fraud-api}
  ports: [{port: 8000, targetPort: 8000, nodePort: 30080}]
  type: NodePort   # accessible at <node-ip>:30080 without port-forward
