k8s/mlflow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
spec:
  replicas: 1
  selector:
    matchLabels: {app: mlflow}
  template:
    metadata:
      labels: {app: mlflow}
    spec:
      containers:
      - name: mlflow
        image: ghcr.io/mlflow/mlflow
        args:
          - mlflow server --host 0.0.0.0 --port 5000
            --backend-store-uri sqlite:///mlflow/mlruns/mlflow.db
            --default-artifact-root s3://mlflow/
        ports: [{containerPort: 5000}]
        volumeMounts:
        - {name: mlruns, mountPath: /mlflow/mlruns}
      volumes:
      - name: mlruns
        persistentVolumeClaim: {claimName: mlflow-pvc}
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow
spec:
  selector: {app: mlflow}
  ports: [{port: 5000, targetPort: 5000}]
